Updated localisations for new 2 year reading plan

--- a/AndBible/res/values-af/strings.xml
+++ b/AndBible/res/values-af/strings.xml
@@ -129,6 +129,7 @@
   <string name="rdg_plan_y1ot1nt1_OTandNT">Deur die bybel in \'n jaar - OT en NT</string>
   <string name="rdg_plan_y1ot1nt1_OTthenNT">Deur die bybel in \'n jaar - OT dan NT</string>
   <string name="rdg_plan_y1ot1nt2_mcheyne">Deur die bybel in \'n jaar (M\'Cheyne)</string>
+  <string name="rdg_plan_y2ot1ntps2">2 Jaar lees plan - OT een keer, NT en Psalms twee keer</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
   <!--Document context menu-->
   <string name="delete">Skrap</string>
