--- a/AndBible/res/values-nb/strings.xml
+++ b/AndBible/res/values-nb/strings.xml
@@ -129,6 +129,7 @@
   <string name="rdg_plan_y1ot1nt1_OTandNT">Hele Bibelen på ett år (GT og NT parallelt)</string>
   <string name="rdg_plan_y1ot1nt1_OTthenNT">Hele Bibelen på ett år (GT, deretter NT)</string>
   <string name="rdg_plan_y1ot1nt2_mcheyne">Hele Bibelen på ett år (M\'Cheyne)</string>
+  <string name="rdg_plan_y2ot1ntps2">2-årsplan - GT én gang, NT og salmene to ganger</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
   <!--Document context menu-->
   <string name="delete">Slett</string>
