--- a/AndBible/res/values-ky/strings.xml
+++ b/AndBible/res/values-ky/strings.xml
@@ -129,6 +129,7 @@
   <string name="rdg_plan_y1ot1nt1_OTandNT">Библияны толугу менен – БК жана ЖК бир жылда окуп чыгуу.</string>
   <string name="rdg_plan_y1ot1nt1_OTthenNT">Библияны толугу менен – алгач БК анан ЖК бир жылда окуп чыгуу.</string>
   <string name="rdg_plan_y1ot1nt2_mcheyne">Библияны толугу менен (Мак Шейн боюнча).</string>
+  <string name="rdg_plan_y2ot1ntps2">2 жылдык план - БК бир ирет, ЖК жана Забурду эки иреттен окуу.</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
   <!--Document context menu-->
   <string name="delete">Өчүрүү</string>
