--- a/AndBible/res/values-lt/strings.xml
+++ b/AndBible/res/values-lt/strings.xml
@@ -21,6 +21,7 @@
   <string name="choosePassageChapterName">Rinkitės skyrių</string>
   <string name="choosePassageVerseName">Rinktis eilutę</string>
   <string name="bible">Biblija</string>
+  <string name="deuterocanonical">Apokrifai</string>
   <!--Search-->
   <string name="search_index">Paieškos indeksas</string>
   <string name="index_creation_required">Paieškai reikia indekso.\n\nIndeksai gali būti parsiųsti iš interneto arba sukurti vietoje.\n\nParsiuntimas yra žymiai greitesnis, o ir parsiųsti indeksai turi daugiau savybių, reikalingų paieškai.\n\nIndeksų parsiuntimui reikia interneto ryšio.\n</string>
@@ -128,6 +129,7 @@
   <string name="rdg_plan_y1ot1nt1_OTandNT">Biblija per metus - ST ir NT</string>
   <string name="rdg_plan_y1ot1nt1_OTthenNT">Biblija per metus - pirma ST, po to NT</string>
   <string name="rdg_plan_y1ot1nt2_mcheyne">Biblija per metus (M\'Cheyne)</string>
+  <string name="rdg_plan_y2ot1ntps2">Dviejų metų planas: ST - kartą, NT ir Psalmės - du kartus</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
   <!--Document context menu-->
   <string name="delete">Pašalinti</string>
