--- a/AndBible/res/values-hu/strings.xml
+++ b/AndBible/res/values-hu/strings.xml
@@ -2,9 +2,22 @@
 <resources>
   <string name="app_name">And Bible</string>
   <!--Startup & Help-->
-  <string name="splash_top_text">\n\"És monda Isten: \'Legyen világosság:\' és lőn világosság.\"\nMózes I. 1:3</string>
-  <string name="help_text">A funkciók eléréséhez nyomd meg a MENÜ gombot\n\nAz előző vagy következő fejezethez lapozáshoz, használd a trackballt, a D-padot vagy húzd végig az ujjad a képernyőn</string>
-  <string name="help_text_long"><b>Navigáció</b>\nAz előző vagy következő fejezethez lapozáshoz, használd a trackballt, a D-padot vagy húzd végig az ujjad a képernyőn.\n\nKettős koppintással lehet be-/kikapcsolni a teljes képernyőt.\n\n\n<b>Menü</b>\nA funkciók eléréséhez nyomd meg a MENÜ gombot.\n\nTovábbi dokumentumok letöltéséhez nyomd meg a Menü / Egyebek / Dokumentumok letöltése opciót.\n\n\n<b>Felolvasás</b>\nNyomd meg a \"Felolvasás\" gombot a fejezet felolvasásához vagy a felolvasás leállításához.\n\n\n<b>Jegyzeteim</b>\nAz aktuális vershez kapcsolódó lehetőségekért nyomd hosszan a szöveget, hogy megnyíljon a helyi menü.\nA \"Jegyzeteim\" helyi menü opcióval lehet a jegyzeteket a versekhez rögzíteni. A meglévő jegyzeteket a főmenün keresztül érhetjük el.\n\n\n<b>Könyvjelzők</b>\nKönyvjelzőt a vers helyi menüjében hozhatsz létre. A könyvjelző-kezelő a főmenüben érhető el. A könyvjelző-kezelőben címkék segítségével lehet csoportosítani a könyvjelzőket.\n\n\n<b>Keresés</b>\nA kereső kifejezés tartalmazhat vezérlő karaktereket pl. *, ?, AND, OR, NOT (további lehetőségeket lásd az \"Apache Lucene - Query Parser Syntax\" oldalain).\n\n\n<b>Helyi menük</b>\nHosszan nyomva egy verset további funkciókat érhetsz el.\n\nHosszan nyomva egy dokumentumot a dokumentum-kezelőben törölheted azt, vagy további információkat érhetsz el.\n\nHosszan nyomva a Vissza gombot elérheted az Olvasás történetet.</string>
+  <string name="splash_top_text">
+\"Akkor ezt mondta Isten: Legyen világosság! És lett világosság.\"\nI. Mózes 1:3</string>
+  <string name="help_text">A funkciók eléréséhez nyomd meg a MENÜ gombot\n\nAz előző vagy következő fejezethez ugráshoz, használd a trackballt, D-padot vagy húzd végig az ujjad a képernyőn</string>
+  <string name="help_text_long"><b>Navigáció</b>\nAz előző vagy következő fejezethez ugráshoz, használd a trackballt, D-padot vagy húzd végig az ujjad a képernyőn.\n\nKettős koppintással lehet be-/kikapcsolni a teljes képernyőt.
+\n\n<b>Menü</b>
+\nA funkciók eléréséhez nyomd meg a MENÜ gombot.\n\nTovábbi dokumentumok letöltéséhez nyomd meg a Menü / Egyebek / Dokumentumok letöltése opciót.
+\n\n<b>Felolvasás</b>\nNyomd meg a \"Felolvasás\" gombot a fejezet felolvasásához vagy a felolvasás leállításához.
+\n\n<b>Jegyzeteim</b>
+\nAz aktuális vershez kapcsolódó lehetőségekért nyomd hosszan a szöveget, hogy megnyíljon a helyi menü.\nA \"Jegyzeteim\" helyi menü opcióval lehet a jegyzeteket a versekhez rögzíteni. A meglévő jegyzeteket a főmenün keresztül érhetjük el.
+\n\n<b>Könyvjelzők</b>
+\nKönyvjelzőt a vers helyi menüjében hozhatsz létre. A könyvjelző-kezelő a főmenüben érhető el. A könyvjelző-kezelőben címkék segítségével lehet csoportosítani a könyvjelzőket.
+\n\n<b>Keresés</b>
+\nA kereső kifejezés tartalmazhat vezérlő karaktereket pl. *, ?, AND, OR, NOT (további lehetőségeket lásd az \"Apache Lucene - Query Parser Syntax\" oldalain).\n\n\n<b>Helyi menük</b>
+\nHosszan nyomva egy verset további funkciókat érhetsz el.
+\nHosszan nyomva egy dokumentumot a dokumentum-kezelőben törölheted azt, vagy további információkat érhetsz el.
+\nHosszan nyomva a Vissza gombot elérheted az Olvasás történetet.</string>
   <string name="version_text">Verzió: %s</string>
   <string name="no_sdcard_error">Helyezz be egy SD-kártyát, és indítsd újra az And Bible-t.</string>
   <!--Main menu-->
@@ -24,7 +37,7 @@
   <string name="deuterocanonical">Deuterokanonikus</string>
   <!--Search-->
   <string name="search_index">Keresési index</string>
-  <string name="index_creation_required">A kereséshez index szükséges.\n\nAz indexek letölthetőek az internetről vagy helyben is létrehozhatóak.\n\nA letöltés sokkal gyorsabb és a letöltött indexek több keresési lehetőséget tartalmaznak.\n\nAz indexek letöltéséhez internetkapcsolat szükséges.\n</string>
+  <string name="index_creation_required">A kereséshez egy index szükséges.\n\nAz indexek letölthetőek az internetről vagy helyben is létrehozhatóak.\n\nA letöltés sokkal gyorsabb és a letöltött indexek több keresési lehetőséget tartalmaznak.\n\nAz indexek letöltéséhez internetkapcsolat szükséges.\n</string>
   <string name="indexing_wait_msg">Ha az indexelés befejeződött, a kereső képernyő automatikusan megjelenik.</string>
   <string name="index">Index</string>
   <string name="index_download">Letöltés</string>
@@ -105,14 +118,14 @@
   <!--Module download-->
   <string name="download">Dokumentumok letöltése</string>
   <string name="download_confirmation">Letöltesz egy Bibliát az internetről?</string>
-  <string name="download_source_message">A dokumentumok letöltése a \nhttp://www.crosswire.org,\na http://ibt.org.ru és a\nhttp://xiphos.org címről történik.</string>
+  <string name="download_source_message">A dokumentumok letöltése a \nhttp://www.crosswire.org\n&amp; http://ibt.org.ru\n&amp; http://xiphos.org címekről történnek.</string>
   <string name="download_document_confirm_prefix">Letöltés</string>
   <string name="download_refreshing_book_list">Elérhető dokumentumok listájának frissítése</string>
   <string name="download_refresh_book_list_menu_item">Frissítés</string>
   <string name="error_downloading">Hiba történt a letöltés közben. Kérlek, ellenőrizd az internetkapcsolatot.</string>
   <string name="no_internet_connection">Nem sikerült kapcsolódni az internethez.</string>
   <string name="storage_space_warning">Nincs elég üres hely az eszközön.</string>
-  <string name="wait_for_bible">Kérlek várj, amíg a Biblia teljesen letöltődik. Utána automatikusan a fő képernyő jelenik meg.\n\nTovábbi dokumentumokat később a Menü/Egyebek/Dokumentumok letöltése menüpont alatt tölthetsz le.</string>
+  <string name="wait_for_bible">Kérlek várj, amíg a Biblia teljesen letöltődik. Utána automatikusan a fő képernyő jelenik meg.\n\nTovábbi dokumentumokat később a Menü/Tovább/Dokumentumok letöltése menüpont alatt tölthetsz le.</string>
   <string name="wait_for_bible_not_yet">Kérlek várj. A Biblia telepítése még nem fejeződött be.</string>
   <string name="download_complete_no_bibles">Nincs Biblia telepítve. Nyomd meg a Vissza gombot, és próbáld újra.</string>
   <string name="too_many_jobs">Túl sok feladat fut. Kérlek várj, amíg valamelyik befejeződik és próbáld újra.</string>
@@ -129,6 +142,7 @@
   <string name="rdg_plan_y1ot1nt1_OTandNT">A Biblia egy év alatt - Ószöv. és Újszöv.</string>
   <string name="rdg_plan_y1ot1nt1_OTthenNT">A Biblia egy év alatt - Ószöv. majd Újszöv.</string>
   <string name="rdg_plan_y1ot1nt2_mcheyne">A Biblia egy év alatt (M\'Cheyne)</string>
+  <string name="rdg_plan_y2ot1ntps2">2 éves terv - ÓSZ egyszer, ÚSZ és Zsoltárok kétszer</string>
   <!--string name="rdg_plan_m1gospels">Through the Gospels in a month</string-->
   <!--Document context menu-->
   <string name="delete">Törlés</string>
@@ -138,7 +152,7 @@
   <string name="delete_search_index_doc">Törlöd %s indexét?</string>
   <!--Verse context menu-->
   <string name="select_text">Szöveg kijelölése</string>
-  <string name="select_text_help">Lassan húzd a kijelöléshez.\nMajd egy érintéssel vágólapra másolhatod a kijelölést.</string>
+  <string name="select_text_help">Lassan húzd a kijelöléshez.\nMajd egy érintéssel a vágólapra másolhatod.</string>
   <string name="notes">Lábjegyzetek és hivatkozások</string>
   <string name="copy">Vers másolása</string>
   <string name="share_verse">Vers megosztása...</string>
