--- a/AndBible/res/values-nl/strings.xml
+++ b/AndBible/res/values-nl/strings.xml
@@ -3,9 +3,13 @@
   <string name="app_name">And Bible</string>
   <!--Startup & Help-->
   <string name="splash_top_text">
-En God zei: \'Er moet licht komen en er was licht.\" Genesis 1:3</string>
+\n \"En God zei: \'Er moet licht komen en er was licht.\" \nGenesis 1:3</string>
   <string name="help_text">Druk op de Menutoets voor acties\n\n\Ga naar het volgende of vorige hoofdstuk met behulp van de track-bal, pad of veeg op het scherm met je vinger</string>
-  <string name="help_text_long">Navigatie \nGa naar het volgende of vorige hoofdstuk met behulp van de track-bal, D-pad of vegen op het scherm met je vinger \n\nDruk op de MENU toets voor acties \n\nOm meer documenten te downloaden druk op Menu / Meer / Download documenten \n\nDruk lang op het bijbel venster om het contextmenu te openen voor acties met betrekking tot het huidige vers. \nDruk lang op een document in de document selector om het te verwijderen of te bekijken. \n\nSpraak\nDruk op Spreek om een dialoog te starten of te stoppen met lezen \n\nBladwijzers \nBladwijzers kunnen worden toegevoegd via het vers context menu. De Bladwijzer Manager is toegankelijk via het hoofdmenu. Met het Bladwijzer Manager context menu kunnen bladwijzers worden gegroepeerd met behulp van labels.</string>
+  <string name="help_text_long">Navigatie \nGa naar het volgende of vorige hoofdstuk met behulp van de track-bal, D-pad of vegen op het scherm met je vinger \n\nDruk op de MENU toets voor acties \n\nOm meer documenten te downloaden druk op Menu / Meer / Download documenten \n\nDruk lang op het bijbel venster om het contextmenu te openen voor acties met betrekking tot het huidige vers. \nDruk lang op een document in de document selector om het te verwijderen of te bekijken. \n\nSpraak\nDruk op Spreek om een dialoog te starten of te stoppen met lezen \n\nBladwijzers \nBladwijzers kunnen worden toegevoegd via het vers context menu. De Bladwijzer Manager is toegankelijk via het hoofdmenu. Met het Bladwijzer Manager context menu kunnen bladwijzers worden gegroepeerd met behulp van labels. \n\nZoek\nDe zoek tekst kan bestaan uit speciale tekens, zoals *, ?, AND, OR, NOT (see \"Apache Lucene - Query Parser Syntax\" for more details)
+\n\nContext Menus
+\nDruk langere tijd op het Bijbel venster om het context menu te openen voor acties betreffende het huidige vers.
+\nDruk langere tijd op een document in de document selector om het te verwijderen of om informatie bekijken.
+\nDruk langere tijd op de knop Terug om toegang te krijgen tot de lijst Geschiedenis</string>
   <string name="version_text">Versie %s</string>
   <string name="no_sdcard_error">Gelieve een SD-kaart in te steken en start And Bible opnieuw</string>
   <!--Main menu-->
