--- a/AndBible/res/values/strings.xml
+++ b/AndBible/res/values/strings.xml
@@ -117,7 +117,7 @@ TODO: error and download_document_confirm_prefix need to be parameterized rather
     <string name="prefs_split_screen_not_linked">Not linked</string>
 
     <!-- Split screen -->
-    <string name="splitSwap">Swap</string>
+    <string name="splitPromote">Promote</string>
     
     <!-- Notes screen -->
     <string name="no_chapter_notes">No notes exist in this chapter</string>
